# LLM_practice

./: .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  DEVELOPMENT_GUIDE.md  FALLBACK_GUIDE.md  LLM_AGENT_LEARNING_GUIDE.md  MODEL_PRIORITY_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  debug_model.py  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  step_by_step_guide.md  test_default_model.py  test_fallback.py  test_fixed.py  test_kimi_tools.py  test_model_fallback.py
app/agents/: chat_agent.py  langchain_agent.py  simple_agent.py
app/core/: config.py  model_config.py
app/models/: database.py  llm_models.py
app/routers/: chat.py  chat_simple.py  models.py
app/services/: mock_client.py  model_manager.py  openrouter_client.py  openrouter_fallback_client.py  session_manager.py  session_manager_mock.py
app/tools/: __init__.py  base_tool.py  calculator.py  search.py  weather.py  web_search.py
docs/: free-tool-models.md  langchain-llama-guide.md  model-fallback-system.md  project-structure.md  project_structure.md  quick-start-guide.md  technical-terms.md
src/agents/: llama_agent.py  manager.py
src/core/: config.py  logging.py
